--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,10 +1,11 @@
 nav {
-    background-color: darkblue;
+    background-color: rgb(195, 195, 231);
     padding: 10px;
+
 }
 
 nav a {
-    color: white;
+    color: rgb(42, 33, 33);
     display: block;
     padding: 20px;
 }
@@ -14,7 +15,7 @@ h1 {
 }
 
 img {
-    width: 150px;
+    width: 220px;
     height: auto;
     border: 1px solid black;
     padding: 2px;
@@ -25,3 +26,33 @@ p {
     padding: 10px;
 }
 
+main {
+    width: 840px
+}
+
+aside {
+
+    padding: 10px;
+    background-color: rgb(195, 195, 231);
+    color: black;
+    border: 1px solid rgb(105, 41, 103);
+    text-align: left;
+    padding: 10px;
+}
+
+aside img {
+    width: 200px;
+    height: auto;
+
+}
+
+aside p {
+    padding: 0;
+}
+
+footer {
+    margin-top: 1rem;
+    border-top: 1px solid rgb(105, 41, 103);
+    text-align: center;
+    clear: both;
+}
