--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,9 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 nav {
     background-color: rgb(195, 195, 231);
     padding: 10px;
@@ -14,37 +20,55 @@ h1 {
     color: darkblue;
 }
 
-main img {
-    width: 220px;
-    height: auto;
+h2 {
+    color: rgb(238, 225, 161);
+    position: absolute;
+    top: 30px;
+    left: 100px;
+    clear: both;
+}
+
+aside {
+    width: 20rem;
+    text-align: center;
+    position: relative;
+}
+
+img {
+    width: 200px;
+    height: 200px;
     border: 1px solid black;
     padding: 2px;
     box-shadow: 0 0 30px gray;
+    float: right;
+}
+
+main img {
+    width: 170px;
+    height: auto;
+    float: right;
 }
 
 p {
     padding: 0;
+    text-align: justify;
+}
+
+aside p {
+    clear: both;
+    margin-top: 1rem;
 }
 
 main {
     max-width: 840px
 }
 
-aside {
-    width: 20rem;
-    padding: 10px;
-    background-color: rgb(195, 195, 231);
-    color: black;
-    border: 1px solid rgb(105, 41, 103);
-    text-align: left;
-    padding: 10px;
-    margin: 1rem;
-}
-
 aside img {
-    width: 200px;
+    width: 280px;
     height: auto;
-
+    display: block;
+    margin: 0 auto;
+    float: none;
 }
 
 footer {
@@ -52,4 +76,14 @@ footer {
     border-top: 1px solid rgb(105, 41, 103);
     text-align: center;
     clear: both;
+}
+
+/* this part is class selectors */
+
+.box {
+    margin: 1rem;
+    padding: 1rem;
+    background-color: #d8f9f1;
+    width: 25rem;
+    /* this is shorthand for #dddddd */
 }
